redesign store, cart, payment information pages

--- a/WPF/WPF.csproj
+++ b/WPF/WPF.csproj
@@ -216,6 +216,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="House.jpg" />
+    <Content Include="Images\TransitHub Logo.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
