--- a/TransitHubXAML/TransitHub.csproj
+++ b/TransitHubXAML/TransitHub.csproj
@@ -59,6 +59,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="accountPage.xaml.cs">
+      <DependentUpon>accountPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="cartPage.xaml.cs">
       <DependentUpon>cartPage.xaml</DependentUpon>
     </Compile>
@@ -137,6 +140,10 @@
     <Compile Include="ViewReceipt1.xaml.cs">
       <DependentUpon>ViewReceipt1.xaml</DependentUpon>
     </Compile>
+    <Page Include="accountPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Cart.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -348,7 +355,6 @@
     <Resource Include="Resources\cart_selected.png" />
     <Resource Include="Resources\help.png" />
     <Resource Include="Resources\help_selected.png" />
-    <Resource Include="Resources\my_tickets.png" />
     <Resource Include="Resources\my_tickets_selected.png" />
     <Resource Include="Resources\store.png" />
     <Resource Include="Resources\store_selected.png" />
@@ -373,6 +379,12 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\edit.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\my_tickets.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="store.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
