attempt 1 fix git issue

--- a/TransitHubXAML/TransitHub.csproj
+++ b/TransitHubXAML/TransitHub.csproj
@@ -88,6 +88,10 @@
     <Compile Include="Verification.xaml.cs">
       <DependentUpon>Verification.xaml</DependentUpon>
     </Compile>
+    <Page Include="AccountEdit.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Cart.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
